# sammelsurium

./: README.md
certs/: sign-tool.sh.asc
configs/: .vimrc  tmux.conf
configs/bash_profile.d/: histArchive  myEnv  myPS1  myQOLenhancers
configs/i3/: abcdam_i3.conf  base.conf  dzen2runnerd.yml  groove.conf  i3_ext.conf
configs/iwd/: main.conf
configs/modprobe.d/: my-intel-ax210.conf
configs/systemd/user/: signal_desktop.service
routines/: bash-lib.sh  branch_and_npmi.sh  bupp.sh  clone_rep_id.sh  debian-cuda-docker-setup.sh  debian-cuda-setup.sh  debian-docker-setup.sh  dist-gen.pl  helper.sh  mop_docker.sh  nva-container-tk-installer.sh  pandoc-sanitizer.pl  pretty-synopsis.pl  setup_nvidia_env.sh  sign-tool.sh  spawn-i3.sh  ss-bup.sh  sync_vault.pl  ttmux.sh  webcam-serve.sh
routines/algosnip/egcd_tests/: egcd_external.py  egcd_timer.py  egcd_vanilla.py
routines/daemon/: activity_listener.sh
routines/docker/: mop_docker.sh
routines/installers/: disc-instupd.sh  obsidian-installer.deb.sh  vscodium-installer.deb.sh  webstorm-installer.sh
routines/penpot-project-template/: .env.dev  docker-compose.yaml  penpot-launcher.sh
routines/perl/: dumpLi3.pl  dumplayi3.pl  frename.pl  git-lsb.pl  lsblkp.pl  nvmon.pl  rebuild-hosts.pl  resti3.pl
routines/rust/grepsta-rs/: Cargo.toml  rustfmt.toml
routines/rust/grepsta-rs/src/: common.rs  init.rs  lib.rs  main.rs
routines/rust/grepsta-rs/src/commands/: get.rs  list.rs
routines/shell/: screenshot.sh
sauce/: backlog.md  code.md  devops.md  qubes.md  tokenomics.md  unix.md  validate_format.sh
(+73 files in other folders)
