[package]
name = "grepsta-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
figment = { version = "0.10.19", features = ["yaml"] }
futures = "0.3.31"
fuzzy-matcher = "0.3.7"
inquire = "0.7.5"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
